--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         compose_navigation_version = '2.6.0-alpha01'
         compose_coil_version = '2.2.1'
         compose_glide_version = '2.0.0'
+        compose_flowlayout_version = '0.23.1'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
